DDW-431 - Newsfeed shadow fixes - fixes for scrollbar

--- a/source/renderer/app/components/news/NewsFeed.scss
+++ b/source/renderer/app/components/news/NewsFeed.scss
@@ -116,12 +116,6 @@
       margin-bottom: 11px;
     }
 
-    &.hasShadow {
-      *::-webkit-scrollbar-track {
-        margin-top: 22px;
-      }
-    }
-
     :global {
       *::-webkit-scrollbar-thumb {
         background-color: var(
